# image_processing

./: .gitignore  CMakeLists.txt  README.md  package.xml
src/: active_ir_processor (WFOV).cpp  depth_to_rgb.cpp  occlusion.cpp  passive_ir_processor.cpp
